﻿$Revision$
	$Author$ $Date$
	1. если не нашли схему поумолчанию (default), берем первую в списке.
	 реже падаем, и ранее видимо была ошибка.

#Revision: 1784
	#Author: ctapmex Date: 2011-08-30 14:10:18 +0600 (Вт, 30 авг 2011)
	1. еще 1779, но для x86 .

#Revision: 1779
	#Author: ctapmex Date: 2011-08-29 22:27:35 +0600 (Пн, 29 авг 2011)
	1. уменьшаем потребление памяти (на 8 байт каждая) в x64 за счет выравнивания в структурах

#Revision: 1778
	#Author: ctapmex Date: 2011-08-29 17:23:42 +0600 (Пн, 29 авг 2011)
	1. файл проекта для VS2010 colorer.exe
	2. исправление 1175, для работы с не unicode сборкой.

#Revision: 1777
	#Author: ctapmex Date: 2011-08-29 17:19:32 +0600 (Пн, 29 авг 2011)
	1. malloc.c 2.8.5 

#Revision: 1775
	#Author: ctapmex Date: 2011-08-10 22:02:31 +0600 (Ср, 10 авг 2011)
	1. в путях до файлов базы могут быть переменне окружения. 

#Revision: 1752
	#Author: ctapmex Date: 2011-07-14 14:58:32 +0600 (Чт, 14 июл 2011)
	1. rollback InternalString

#Revision: 1750
	#Author: ctapmex Date: 2011-07-13 16:01:06 +0600 (Ср, 13 июл 2011)
	1. 1749 еще раз

#Revision: 1749
	#Author: ctapmex Date: 2011-07-11 00:08:45 +0600 (Пн, 11 июл 2011)
	1. неверное использование глобальной переменной

#Revision: 1746
	#Author: ctapmex Date: 2011-07-10 15:05:16 +0600 (Вс, 10 июл 2011)
	1. Outliner переделан под InternalString как наследник RegionHandler
	2. скрипты makefile

#Revision: 1745
	#Author: ctapmex Date: 2011-07-10 13:57:46 +0600 (Вс, 10 июл 2011)
	1. слито с бранчем ctapmex_internal_string  - переделка работы со строками в ядре парсера.
	прирост скорости от14 до 32 процентов.

#Revision: 1715
	#Author: ctapmex Date: 2011-06-28 16:51:35 +0600 (Вт, 28 июн 2011)
	1. добавлена возможность использовать prototype с одинаковыми именами.
	!! использовать данную возможность нужно только при первичной загрузке базы схем.
	т.е. загрузить базы, загрузить схему, например cpp, попользоваться ей, а потом попытаться 