@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. colorer.exe понимает переменне окружения в пути до catalog.xml. 
+
+#Revision: 1799
+	#Author: ctapmex Date: 2011-12-25 19:43:03 +0600 (Вс, 25 дек 2011)
 	1. если не нашли схему поумолчанию (default), берем первую в списке.
 	 реже падаем, и ранее видимо была ошибка.
 
